--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,10 @@
     crossorigin
     src="/cdn/@highlightjs/cdn-assets@11.9.0/highlight.min.js"
   ></script>
+  <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+  />
 </head>
 <body>
   <div id="root"></div>
