--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,13 +12,14 @@
     content="width=device-width, initial-scale=1.0"
   />
   <title>CodeMate</title>
+  <!-- Use direct CDN URLs instead of dev proxy paths so they work on Vercel -->
   <link
     rel="stylesheet"
-    href="/cdn/@highlightjs/cdn-assets@11.9.0/styles/nord.min.css"
+    href="https://unpkg.com/@highlightjs/cdn-assets@11.9.0/styles/nord.min.css"
   />
   <script
     crossorigin
-    src="/cdn/@highlightjs/cdn-assets@11.9.0/highlight.min.js"
+    src="https://unpkg.com/@highlightjs/cdn-assets@11.9.0/highlight.min.js"
   ></script>
   <link
     href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
